plugins {
    id 'org.screamingsandals.plugin-builder' version "${SCREAMING_PLUGIN_BUILDER_VERSION}" apply false
}

defaultTasks 'clean', 'screamCompile'

allprojects {
    group = 'io.pronze.hypixelify'
    version = SBA_VERSION as Object
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.screamingsandals.plugin-builder'

    enableShadowPlugin()

    configurations.all {
        // Check for updates every build
        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
    }

    repositories {
        mavenLocal() // Debug builds
        mavenCentral()
        maven {
            url = uri('https://repo.dmulloy2.net/nexus/repository/public/')
        }
        maven {
            url = uri('https://repo.extendedclip.com/content/repositories/placeholderapi/')
        }
        maven {
            url = uri('https://papermc.io/repo/repository/maven-public/')
        }
        maven {
            url = uri('https://repo.maven.apache.org/maven2/')
        }
        maven {
            url = uri('https://repo.screamingsandals.org/releases')
        }
    }

    dependencies {
        compileOnly paperLegacy(PAPER_LEGACY_VERSION)
        compileOnly 'org.screamingsandals.bedwars:BedWars:' + BEDWARS_VERSION
        compileOnly 'org.screamingsandals.bedwars:BedWars-API:' + BEDWARS_VERSION
    }

    shadowJar {
        relocate 'org.spongepowered.configurate', 'io.github.pronze.ext.configurate'
        relocate 'org.yaml.snakeyaml', 'io.github.pronze.ext.snakeyaml'
        relocate 'net.kyori', 'io.github.pronze.ext.kyori'
        relocate 'cloud.commandframework', 'io.github.pronze.ext.cloud'
        relocate 'me.lucko.commodore', 'io.github.pronze.ext.commodore'
        relocate 'org.screamingsandals.lib', 'io.github.pronze.ext.screaminglib'
        relocate 'org.screamingsandals.simpleinventories', 'io.github.pronze.ext.simpleinventories'
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }
    sourceCompatibility = '11.0'
}



